[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
structopt = "0.3.25"
log = "0.4.14"
env_logger = "0.9.0"
nom = "7.1.0"
rustc-hash = "1.1.0"
libc = "0.2.117"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "aocbench"
harness = false

[profile.release]
debug = true
