[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
structopt = "0.3.26"
log = "0.4.17"
env_logger = "0.10.0"
nom = "7.1.1"
rustc-hash = "1.1.0"
num = "0.4.0"
ndarray = "0.15.6"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "aocbench"
harness = false

[profile.release]
debug = true  # more readable flamegraphs
